# preproc

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  run_preproc.sh  run_sizes.sh
concat/: CMakeLists.txt
concat/src/: cmdline.cpp  cmdline.h  main.cpp
gmag/: CMakeLists.txt
gmag/src/: cmdline.cpp  cmdline.h  main.cpp
gradvol/: CMakeLists.txt
gradvol/src/: main.cpp
preproc/: CMakeLists.txt
preproc/src/: CMakeLists.txt  cmdline.cpp  cmdline.h  main.cpp  outputer.h  processrawfile.h  processrelmap.cpp  processrelmap.h  reader.h  semathing.h  volumeminmax.h  voxelopacityfunction.h  writer.h
preproc/src/messages/: message.h  messagebroker.cpp  messagebroker.h  recipient.h  rovchangingmessage.h
preproc/src/parallel/: CMakeLists.txt  parallelfor_voxelrelevance.h  parallelreduce_blockempties.h  parallelreduce_blockminmax.h  parallelreduce_blockrov.h  parallelreduce_histogram.h  parallelreduce_minmax.h
pyproc/: Pipfile  pyproc
pyproc/src/: parseargs.py  process.py
python/: parse_results.py
rawhist/: CMakeLists.txt
rawhist/src/: cmdline.cpp  cmdline.h  main.cpp
resample/: CMakeLists.txt
resample/src/: CMakeLists.txt  cmdline.cpp  cmdline.h  grid.h  main.cpp  resample.cpp  resample.h
results/json/hop_flower-256/: hop_flower-256_1-1-1_1.17549e-38-3.40282e+38.json  hop_flower-256_10-10-10_1.17549e-38-3.40282e+38.json  hop_flower-256_11-11-11_1.17549e-38-3.40282e+38.json  hop_flower-256_12-12-12_1.17549e-38-3.40282e+38.json  hop_flower-256_13-13-13_1.17549e-38-3.40282e+38.json  hop_flower-256_14-14-14_1.17549e-38-3.40282e+38.json  hop_flower-256_15-15-15_1.17549e-38-3.40282e+38.json  hop_flower-256_16-16-16_1.17549e-38-3.40282e+38.json  hop_flower-256_17-17-17_1.17549e-38-3.40282e+38.json  hop_flower-256_18-18-18_1.17549e-38-3.40282e+38.json  hop_flower-256_19-19-19_1.17549e-38-3.40282e+38.json  hop_flower-256_2-2-2_1.17549e-38-3.40282e+38.json  hop_flower-256_20-20-20_1.17549e-38-3.40282e+38.json  hop_flower-256_21-21-21_1.17549e-38-3.40282e+38.json  hop_flower-256_22-22-22_1.17549e-38-3.40282e+38.json  hop_flower-256_23-23-23_1.17549e-38-3.40282e+38.json  hop_flower-256_24-24-24_1.17549e-38-3.40282e+38.json  hop_flower-256_25-25-25_1.17549e-38-3.40282e+38.json  hop_flower-256_3-3-3_1.17549e-38-3.40282e+38.json  hop_flower-256_4-4-4_1.17549e-38-3.40282e+38.json  hop_flower-256_5-5-5_1.17549e-38-3.40282e+38.json  hop_flower-256_6-6-6_1.17549e-38-3.40282e+38.json  hop_flower-256_7-7-7_1.17549e-38-3.40282e+38.json  hop_flower-256_8-8-8_1.17549e-38-3.40282e+38.json  hop_flower-256_9-9-9_1.17549e-38-3.40282e+38.json
results/json/hop_flower-4096/: hop_flower-4096_1-1-1_0-1.json  hop_flower-4096_10-10-10_0-1.json  hop_flower-4096_11-11-11_0-1.json  hop_flower-4096_12-12-12_0-1.json  hop_flower-4096_13-13-13_0-1.json  hop_flower-4096_14-14-14_0-1.json  hop_flower-4096_15-15-15_0-1.json  hop_flower-4096_16-16-16_0-1.json  hop_flower-4096_17-17-17_0-1.json  hop_flower-4096_18-18-18_0-1.json  hop_flower-4096_19-19-19_0-1.json  hop_flower-4096_2-2-2_0-1.json  hop_flower-4096_20-20-20_0-1.json  hop_flower-4096_21-21-21_0-1.json  hop_flower-4096_22-22-22_0-1.json  hop_flower-4096_23-23-23_0-1.json  hop_flower-4096_24-24-24_0-1.json  hop_flower-4096_3-3-3_0-1.json  hop_flower-4096_4-4-4_0-1.json  hop_flower-4096_5-5-5_0-1.json  hop_flower-4096_6-6-6_0-1.json  hop_flower-4096_7-7-7_0-1.json  hop_flower-4096_8-8-8_0-1.json  hop_flower-4096_9-9-9_0-1.json
results/json/hop_flower-512/: hop_flower-512_1-1-1_1.17549e-38-3.40282e+38.json  hop_flower-512_10-10-10_1.17549e-38-3.40282e+38.json  hop_flower-512_11-11-11_1.17549e-38-3.40282e+38.json  hop_flower-512_12-12-12_1.17549e-38-3.40282e+38.json  hop_flower-512_13-13-13_1.17549e-38-3.40282e+38.json  hop_flower-512_14-14-14_1.17549e-38-3.40282e+38.json  hop_flower-512_15-15-15_1.17549e-38-3.40282e+38.json  hop_flower-512_16-16-16_1.17549e-38-3.40282e+38.json  hop_flower-512_17-17-17_1.17549e-38-3.40282e+38.json  hop_flower-512_18-18-18_1.17549e-38-3.40282e+38.json  hop_flower-512_19-19-19_1.17549e-38-3.40282e+38.json  hop_flower-512_2-2-2_1.17549e-38-3.40282e+38.json  hop_flower-512_20-20-20_1.17549e-38-3.40282e+38.json  hop_flower-512_21-21-21_1.17549e-38-3.40282e+38.json  hop_flower-512_22-22-22_1.17549e-38-3.40282e+38.json  hop_flower-512_23-23-23_1.17549e-38-3.40282e+38.json  hop_flower-512_24-24-24_1.17549e-38-3.40282e+38.json  hop_flower-512_25-25-25_1.17549e-38-3.40282e+38.json  hop_flower-512_3-3-3_1.17549e-38-3.40282e+38.json  hop_flower-512_4-4-4_1.17549e-38-3.40282e+38.json  hop_flower-512_5-5-5_1.17549e-38-3.40282e+38.json  hop_flower-512_6-6-6_1.17549e-38-3.40282e+38.json  hop_flower-512_7-7-7_1.17549e-38-3.40282e+38.json  hop_flower-512_8-8-8_1.17549e-38-3.40282e+38.json  hop_flower-512_9-9-9_1.17549e-38-3.40282e+38.json
results/jupyter_notebooks/: hop4096.ipynb  hop512.ipynb
src/: CMakeLists.txt  blockaverage.h  blockaveragefilter.h  blockaverager.h  blockcollection2.h  blockcollection2_impl.hpp  blockfilter.h  buffer.h  bufferedreader.h  bufferpool.h  cmdline.cpp  cmdline.h  datatypes.cpp  datatypes.h  fileblock.h  indexfile.cpp  indexfile.h  logger.cpp  logger.h  main.cpp  minmax.h  ordinal.h  parallelaverage.h  parsedat.cpp  parsedat.h  readerworker.h  util.cpp  util.h  volume.cpp  volume.h
